--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,41 @@
   margin: 0 auto;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -1rem;
+}
+
+.col1 {
+  width: calc(100% / 12 * 1);
+  flex-basis: auto;
+}
+
+.col2 {
+  width: calc(100% / 12 * 2);
+  flex-basis: auto;
+}
+
+.col3 {
+  width: calc(100% / 12 * 3);
+  flex-basis: auto;
+}
+
+.col6 {
+  width: calc(100% / 12 * 6);
+  flex-basis: auto;
+}
+
+.col8 {
+  width: calc(100% / 12 * 8);
+  flex-basis: auto;
+}
+
+img {
+  max-width: 100%;
+}
+
 /* Element Rules */
 
 .navbar {
@@ -33,19 +68,42 @@
   span {
     padding: 1rem;
   }
+}
 
-  a {
-    text-decoration: none;
-    color: black;
-  }
+.button {
+  color: #ffffff;
+  background-color: var(--drop-button);
+  border: 1px;
+  padding: 0.5rem;
+}
 
-  .button {
-    background-color: var(--drop-button);
-    border: 1px;
-    padding: 0.5rem;
-  }
+a {
+  text-decoration: none;
+  color: black;
 }
 
 .leftnav {
   display: flex;
+}
+
+h1 {
+  font-size: 5rem;
+  padding: 1.5rem;
+}
+
+.freetrial {
+  display: flex;
+  flex-direction: column;
+
+  span {
+    margin: 1rem;
+  }
+}
+
+.fa-solid {
+  font-size: 2.5rem;
+}
+
+.jumbo {
+  background-color: var(--drop-jumbo);
 }
