--- a/css/style.css
+++ b/css/style.css
@@ -28,19 +28,27 @@
   flex-wrap: wrap;
   margin: 0 -1rem;
   justify-content: space-evenly;
+  padding: 1rem;
+  height: max-content;
 }
 
-.col1 {
-  width: calc(100% / 12 * 1);
+.col12 {
+  width: calc(100% / 12 * 12);
   flex-basis: auto;
 }
 
 .col2 {
   width: calc(100% / 12 * 2);
+  flex-basis: auto;
 }
 
 .col3 {
   width: calc(100% / 12 * 3);
+  flex-basis: auto;
+}
+
+.col4 {
+  width: calc(100% / 12 * 4);
 }
 
 .col6 {
@@ -166,4 +174,37 @@ h2 {
 .bussinessplan {
   display: flex;
   align-items: center;
+}
+
+.enterprise {
+  border: 1px solid;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+
+  i {
+    margin: 0.5rem;
+  }
+}
+
+.enterprise_top {
+  align-self: center;
+}
+
+.enterprise_detail {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left_enterprise {
+  display: flex;
+  flex-direction: column;
+  span {
+    font-weight: bold;
+    margin: 0.6rem;
+  }
+
+  p {
+    margin: 0.4rem;
+  }
 }
